Bug 409769 - umbrello c++ importer inserts space in destructor name
Summary: umbrello c++ importer inserts space in destructor name
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: importer (other bugs)
Version First Reported In: 2.28.3 (KDE Applications 19.04.3)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-13 13:00 UTC by Ralf Habacker
Modified: 2019-07-13 13:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.28.80 (KDE Applications 19.07.80)
Sentry Crash Report:


Attachments
test case (242 bytes, text/x-chdr)
2019-07-13 13:00 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-07-13 13:00:05 UTC
Created attachment 121494 [details]
test case

STEPS TO REPRODUCE
1. start umbrello
2. import appended test case
3. inspect destructor of the imported classes

OBSERVED RESULT
The imported destructor contains a space after the '~' character. 

EXPECTED RESULT
The imported destructor should not have a space after the '~'.

SOFTWARE/OS VERSIONS
Linux: openSUSE Leap 42.3
Comment 1 Ralf Habacker 2019-07-13 13:09:31 UTC
Git commit a025b28a5f03147c40189e6b2cc99b99497619b3 by Ralf Habacker.
Committed on 13/07/2019 at 13:08.
Pushed by habacker into branch 'master'.

Fix 'c++ importer inserts space in destructor name'
FIXED-IN: 2.28.80 (KDE Applications 19.07.80)

M  +10   -8    umbrello/codeimport/kdevcppparser/cpptree2uml.cpp

https://commits.kde.org/umbrello/a025b28a5f03147c40189e6b2cc99b99497619b3