Fix 'c++ importer inserts space in destructor name'

BUG:409769
FIXED-IN: 2.28.80 (KDE Applications 19.07.80)